<resources>
    <string name="app_name">Nmedia</string>
    <string name="greeting_phrase">NMedia!</string>
    <string name="distance_of_numbers_to_icon">11</string>
    <string name="number_of_likes">10</string>
    <string name="number_of_shares">5</string>
    <string name="number_of_views">5</string>
    <string name="avatar">avatar</string>
    <string name="menu">menu</string>
    <string name="like_icon">like icon</string>
    <string name="share_icon">share_icon</string>
    <string name="eye_icon">eye icon</string>
    <string name="it_s_just_a_scroll">It\'s just a scroll</string>
    <string name="remove">Remove</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="send_button_description">"send"</string>
    <string name="hint_text">Write text…</string>
    <string name="error_empty_content">This field can\'t be empty</string>
    <string name="error_empty_content2">Message is empty</string>
    <string name="empty_string" />
    <string name="ic_edit_pencil">pencil</string>
    <string name="edit_message"><big><b>Edit message</b></big></string>
    <string name="cross">cross</string>
    <string name="chooser_share_post">dialogue title</string>
    <string name="description_post_save">Save</string>
    <string name="plus_button">Plus</string>
    <string name="video">Video</string>
    <string name="attach">Attach</string>
    <string name="image_by_link">image_by_link</string>
    <string name="button_play">button play</string>
    <string name="text_hint_for_new_post"><i>Write a post</i></string>
    <string name="channel_remote_name">Notifications from the server</string>
    <string name="channel_remote_description">Notifications from a remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_published_post">User %1$s published a post: %2$s</string>
    <string name="if_such_message_is_missing">To be able to get the new, wonderful view of \"enum\" update the application or contact support!</string>


</resources>