<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._Activity.BlankFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size_48dp"
            android:layout_height="@dimen/posts_avatar_size_48dp"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/avatar"
            android:src="@drawable/ic_netology_48dp"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="0.1dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@+id/icMenu"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/icMenu"
            style="@style/Widget.AppTheme.MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu"
            android:paddingEnd="@dimen/icons_margins_4dp"
            app:icon="@drawable/baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/author"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, author, published" />

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginBottom="4dp"
            android:autoLink="web"
            app:layout_constraintBottom_toTopOf="@id/barrier2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="VisualLintLongText"
            tools:text="@sample/posts.json/data/content" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="0.7dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier2" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="500dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/icLikes"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/icons_margins_4dp"
            android:checkable="true"
            android:contentDescription="@string/like_icon"
            android:fontFamily="sans-serif"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="@dimen/material_button_standard_padding_4dp"
            android:textColor="@color/dark_grey"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/toggle_button_ic_like_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@sample/posts.json/testPostData/likes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/icShares"
            style="@style/Widget.AppTheme.ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/icons_margins_4dp"
            android:layout_marginTop="@dimen/icons_margins_4dp"
            android:checkable="false"
            android:contentDescription="@string/share_icon"
            android:fontFamily="sans-serif"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:textColor="@color/dark_grey"
            app:icon="@drawable/baseline_share_24"
            app:layout_constraintStart_toEndOf="@id/icLikes"
            app:layout_constraintTop_toBottomOf="@id/line"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck"
            tools:text="@sample/posts.json/testPostData/shares" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/icEye"
            style="@style/Widget.AppTheme.EyeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/icons_margins_4dp"
            android:layout_marginEnd="@dimen/icons_margins_4dp"
            android:checkable="false"
            android:contentDescription="@string/eye_icon"
            android:fontFamily="sans-serif"
            android:paddingStart="@dimen/material_button_standard_padding_4dp"
            android:paddingTop="0dp"
            android:paddingEnd="@dimen/material_button_standard_padding_4dp"
            android:textColor="@color/dark_grey"
            app:icon="@drawable/baseline_remove_red_eye_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@sample/posts.json/testPostData/views" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>